# linkedin_scrape

./: README.md  pyproject.toml  software_engineer.py  table_data.csv  table_retriever.py  test.py
