[tool.poetry]
name = "data-scraping"
version = "0.1.0"
description = ""
authors = ["Kriti Nyoupane <kritineupane544@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
